# django-dto-attrs

./: README.md  pyproject.toml
src/django_dto_cattrs/: __init__.py
